--- a/ProjectAndUtils/pom.xml
+++ b/ProjectAndUtils/pom.xml
@@ -15,10 +15,18 @@
 	</properties>
 
 	<dependencies>
+		<!-- logger -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 			<version>1.7.21</version>
+		</dependency>
+
+		<!-- fastjson -->
+		<dependency>
+   			<groupId>com.alibaba</groupId>
+    		<artifactId>fastjson</artifactId>
+   			<version>1.2.44</version>
 		</dependency>
 
 		<dependency>
