--- a/ProjectAndUtils/pom.xml
+++ b/ProjectAndUtils/pom.xml
@@ -24,16 +24,21 @@
 
 		<!-- fastjson -->
 		<dependency>
-   			<groupId>com.alibaba</groupId>
-    		<artifactId>fastjson</artifactId>
-   			<version>1.2.44</version>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.44</version>
 		</dependency>
 
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
-			<scope>test</scope>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.6</version>
 		</dependency>
+		<dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
 	</dependencies>
 </project>
