--- a/ProjectAndUtils/pom.xml
+++ b/ProjectAndUtils/pom.xml
@@ -15,6 +15,14 @@
 	</properties>
 
 	<dependencies>
+
+		<!-- modelmapper -->
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>RELEASE</version>
+		</dependency>
+
 		<!-- logger -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -36,11 +44,11 @@
 			<version>1.6.1</version>
 		</dependency>
 		<dependency>
-    		<groupId>jaxen</groupId>
-    		<artifactId>jaxen</artifactId>
-    		<version>1.1.1</version>
+			<groupId>jaxen</groupId>
+			<artifactId>jaxen</artifactId>
+			<version>1.1.1</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
