--- a/ProjectAndUtils/pom.xml
+++ b/ProjectAndUtils/pom.xml
@@ -36,6 +36,12 @@
 			<artifactId>fastjson</artifactId>
 			<version>1.2.44</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>RELEASE</version>
+		</dependency>
 
 		<!-- dom4j -->
 		<dependency>
