--- a/ProjectAndUtils/pom.xml
+++ b/ProjectAndUtils/pom.xml
@@ -15,6 +15,12 @@
 	</properties>
 
 	<dependencies>
+	
+		<dependency>
+			<groupId>io.reactivex</groupId>
+			<artifactId>rxjava</artifactId>
+			 <version>1.3.8</version>
+		</dependency>
 
  		<dependency>
             <groupId>org.mockito</groupId>
